--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,32 @@
     font-family: Arial, sans-serif;
 }
 
+.avatar-img {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 5px solid #ff00e1;
+    box-shadow: 0 0 25px rgba(255, 0, 225, 0.6);
+    transition: all .3s;
+}
+
+.msg {
+    padding: 14px;
+    border-radius: 8px;
+    margin: 20px 0;
+    text-align: center;
+    font-weight: bold;
+}
+.msg.error {
+    background: #932929;
+    border: 1px solid #ff6b6b;
+}
+.msg.success {
+    background: #2e7d32;
+    border: 1px solid #4caf50;
+}
+
 body{
     background-color: rgba(22, 23, 29, 0.95);
     min-width: 100vh;
